@@ -3,9 +3,8 @@ package com.nnk.springboot.services;
 import com.nnk.springboot.domain.BidList;
 import com.nnk.springboot.dto.BidListsResponse;
 import com.nnk.springboot.dto.BidListsResponseAggregationInfoDTO;
+import com.nnk.springboot.exceptions.BidListServiceException.*;
 import com.nnk.springboot.repositories.BidListRepository;
-
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -15,7 +14,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.util.List;
 import java.util.Optional;
 
-import static com.nnk.springboot.exceptions.BidListServiceException.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -23,10 +21,10 @@ import static org.mockito.Mockito.*;
 public class BidListServiceTest {
 
     @InjectMocks
-    BidListService bidListService;
+    private BidListService bidListService;
 
     @Mock
-    BidListRepository bidListRepository;
+    private BidListRepository bidListRepository;
 
     @Test
     void testBidListAggregationInfo() throws BidListAggregationInfoException {
@@ -39,114 +37,107 @@ public class BidListServiceTest {
         List<BidList> bidLists = List.of(bidList);
         when(bidListRepository.findAll()).thenReturn(bidLists);
 
-        BidListsResponse bidListsResponse = bidListService.bidListAggregationInfo();
+        BidListsResponse response = bidListService.bidListAggregationInfo();
 
-        List<BidListsResponseAggregationInfoDTO> bidListsResponseAggregationInfoDTO = bidListsResponse.getBidListsResponseAggregationInfoDTO();
+        List<BidListsResponseAggregationInfoDTO> dtos = response.getBidListsResponseAggregationInfoDTO();
 
-        assertEquals(String.valueOf(bidList.getBidListId()), bidListsResponseAggregationInfoDTO.getFirst().getId());
-        assertEquals(bidList.getAccount(), bidListsResponseAggregationInfoDTO.getLast().getAccount());
-        assertEquals(bidList.getType(), bidListsResponseAggregationInfoDTO.getFirst().getType());
-        assertEquals(String.valueOf(bidList.getBidQuantity()), bidListsResponseAggregationInfoDTO.getFirst().getBidQuantity());
-
+        assertEquals("1", dtos.get(0).getId());
+        assertEquals("user", dtos.get(0).getAccount());
+        assertEquals("USER", dtos.get(0).getType());
+        assertEquals("10.0", dtos.get(0).getBidQuantity());
     }
 
     @Test
-    void testBidListAggregationInfo_Failed(){
+    void testBidListAggregationInfo_Failed() {
         when(bidListRepository.findAll()).thenThrow(new RuntimeException());
 
         assertThrows(BidListAggregationInfoException.class, () -> bidListService.bidListAggregationInfo());
     }
 
     @Test
-    void testBidListSave() throws BidListSaveException {
+    void testBidListSave_Success() throws BidListSaveException {
         BidList bidList = new BidList();
+
         when(bidListRepository.save(bidList)).thenReturn(bidList);
 
-        bidListService.bidListSave(bidList);
+        BidList savedBidList = bidListService.bidListSave(bidList);
 
+        assertEquals(bidList, savedBidList);
         verify(bidListRepository, times(1)).save(bidList);
     }
 
     @Test
-    void testBidListSaveException() {
+    void testBidListSave_Exception() {
         BidList bidList = new BidList();
         when(bidListRepository.save(bidList)).thenThrow(new RuntimeException());
 
         assertThrows(BidListSaveException.class, () -> bidListService.bidListSave(bidList));
-
     }
-
 
     @Test
     void testBidListFindById() throws BidListFindByIdException {
         BidList bidList = new BidList();
-
         bidList.setBidListId((byte) 1);
         bidList.setAccount("user");
-        bidList.setType("USER");
-        bidList.setBidQuantity(10D);
 
         when(bidListRepository.findById(1)).thenReturn(Optional.of(bidList));
 
-        BidList response = bidListService.BidListFindById(1);
+        BidList response = bidListService.bidListFindById(1);
 
-        assertEquals(1, (byte) response.getBidListId());
+        assertEquals((byte) 1, response.getBidListId());
+        assertEquals("user", response.getAccount());
     }
 
     @Test
-    void testBidListFindById_BidListNotFoundException() {
-
+    void testBidListFindById_Exception() {
         when(bidListRepository.findById(1)).thenReturn(Optional.empty());
 
-        Exception exception = Assertions.assertThrows(BidListFindByIdException.class, () -> bidListService.BidListFindById(1));
-        assertEquals(BidListNotFoundException.class, exception.getCause().getClass());
+        assertThrows(BidListFindByIdException.class, () -> bidListService.bidListFindById(1));
     }
-    @Test
-    void testBidListUpdateOverloadWithIdVerification_Success() throws BidListUpdateException {
 
+    @Test
+    void testBidListUpdate_Success() throws BidListUpdateException {
         BidList bidList = new BidList();
         bidList.setBidListId((byte) 1);
 
         when(bidListRepository.save(bidList)).thenReturn(bidList);
-
-        bidListService.bidListUpdate(1,bidList);
+        bidListService.bidListUpdate(1, bidList);
 
         verify(bidListRepository, times(1)).save(bidList);
-
     }
 
     @Test
-    void testBidListUpdateOverloadWithIdVerification_Failed() {
-
+    void testBidListUpdate_IDMismatch() {
         BidList bidList = new BidList();
         bidList.setBidListId((byte) 1);
 
-        Exception exception = assertThrows(BidListUpdateException.class, () -> bidListService.bidListUpdate(2,bidList));
-
+        Exception exception = assertThrows(BidListUpdateException.class, () -> bidListService.bidListUpdate(2, bidList));
         assertEquals(BidListIncoherenceBetweenObjectException.class, exception.getCause().getClass());
-
-        verify(bidListRepository, never()).save(bidList);
-
     }
+
     @Test
-    void testBidListUpdateException(){
+    void testBidListUpdate_Exception() {
         BidList bidList = new BidList();
         bidList.setBidListId((byte) 1);
 
         when(bidListRepository.save(bidList)).thenThrow(new RuntimeException());
 
-        assertThrows(BidListUpdateException.class, () -> bidListService.bidListUpdate(1,bidList));
+        assertThrows(BidListUpdateException.class, () -> bidListService.bidListUpdate(1, bidList));
     }
+
     @Test
     void testBidListDelete() throws BidListDeleteException {
         doNothing().when(bidListRepository).deleteById(1);
+
         bidListService.bidListDelete(1);
-        verify(bidListRepository).deleteById(1);
+
+        verify(bidListRepository, times(1)).deleteById(1);
     }
+
     @Test
-    void testBidListDeleteException(){
-        doThrow(new RuntimeException()).when(bidListRepository).deleteById(anyInt());
+    void testBidListDelete_Exception() {
+        doThrow(new RuntimeException()).when(bidListRepository).deleteById(1);
+
         assertThrows(BidListDeleteException.class, () -> bidListService.bidListDelete(1));
     }
 }
-
